--- a/package.json
+++ b/package.json
@@ -11,11 +11,18 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/cli": "^7.19.3",
+    "@babel/core": "^7.20.5",
+    "@babel/preset-env": "^7.20.2",
+    "@babel/register": "^7.18.9",
     "@wdio/cli": "^7.27.0",
     "@wdio/local-runner": "^7.27.0",
     "@wdio/mocha-framework": "^7.26.0",
     "@wdio/spec-reporter": "^7.26.0",
     "chromedriver": "^107.0.3",
     "wdio-chromedriver-service": "^8.0.0"
+  },
+  "dependencies": {
+    "chai": "^4.3.7"
   }
 }
