--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@wdio/cli": "^7.27.0",
     "@wdio/local-runner": "^7.27.0",
     "@wdio/mocha-framework": "^7.26.0",
+    "@wdio/selenium-standalone-service": "^8.0.2",
     "@wdio/spec-reporter": "^7.26.0",
     "chromedriver": "^107.0.3",
     "wdio-chromedriver-service": "^8.0.0"
